<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authenticate.LoginFragment"><!-- changed the OldLoginFragment to LoginFragment-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="420dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/light_blue_full_icon" />


        <EditText
            android:id="@+id/email_address_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIGN IN" />

        <CheckBox
            android:id="@+id/login_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remember me?" />

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Click here to register" />
    </LinearLayout>
</FrameLayout>